[package]
name = "substrate-telemetry"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Telemetry utils"
edition = "2018"

[dependencies]
bytes = "0.4"
parking_lot = "0.9.0"
futures01 = { package = "futures", version = "0.1" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
futures-timer = "0.2.1"
libp2p = { version = "0.12.0", default-features = false, features = ["libp2p-websocket"] }
log = "0.4"
rand = "0.6"
serde = { version = "1.0.81", features = ["derive"] }
slog = "^2"
slog-json = "^2"
slog-async = "^2"
slog-scope = "^4"
tokio-io = "0.1"
void = "1.0"
