[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'Funding Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'funding-pallet'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
timestamp = { package = "srml-timestamp", path = "../timestamp", default-features = false }
sr-primitives = { package = "sr-primitives", path = "../../core/sr-primitives", default-features = false }
substrate-primitives = { package = "substrate-primitives", path = "../../core/primitives", default-features = false }

# For test cases
[dev-dependencies]
sr-io = { path = "../../core/sr-io" }
sr-primitives = { path = "../../core/sr-primitives" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"sr-primitives/std",
	"srml-support/std",
	"substrate-primitives/std",
	"system/std",
    "rstd/std",
    "timestamp/std",
]