[package]
name = "srml-support"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
srml-metadata = { path = "../metadata", default-features = false }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
runtime-io ={ package = "sr-io", path = "../../core/sr-io", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
primitives = { package = "substrate-primitives",  path = "../../core/primitives", default-features = false }
inherents = { package = "substrate-inherents", path = "../../core/inherents", default-features = false }
srml-support-procedural = { package = "srml-support-procedural", path = "./procedural" }
paste = "0.1"
once_cell = { version = "0.1.6", default-features = false, optional = true }
bitmask = { version = "0.5", default-features = false }
impl-trait-for-tuples = "0.1.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
srml-system = { path = "../system" }

[features]
default = ["std"]
std = [
	"once_cell",
	"bitmask/std",
	"serde",
	"runtime_io/std",
	"parity-codec/std",
	"sr-std/std",
	"sr-primitives/std",
	"srml-metadata/std",
	"inherents/std",
]
nightly = []
strict = []
