[package]
name = "srml-treasury"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
support = { package = "srml-support", path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
balances = { package = "srml-balances", path = "../balances", default-features = false }

[dev-dependencies]
runtime-io ={ package = "sr-io", path = "../../core/sr-io" }
primitives = { package = "substrate-primitives",  path = "../../core/primitives" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"rstd/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"balances/std",
]
